--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,13 +2,21 @@ name: Warmup Bot
 
 on:
   schedule:
-    - cron: "*/10 12-18 * * *"
+    # كل 5 دقائق بين 12:00 و 17:59 UTC
+    # (يعني تقريباً 13:00-19:00 في المغرب إذا كان UTC+1)
+    - cron: "*/5 12-17 * * *"
   workflow_dispatch:
+
+permissions:
+  contents: write
+
+concurrency:
+  group: warmup-bot
+  cancel-in-progress: true
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
-
     steps:
       - name: Download code
         uses: actions/checkout@v4
@@ -26,7 +34,9 @@ jobs:
 
       - name: Run bot
         env:
+          ZOHO_EMAIL: contact@dualwin.agency
           ZOHO_PASSWORD: ${{ secrets.ZOHO_PASSWORD }}
+          NTFY_TOPIC: DualWin_Agency
         run: python warmup_bot.py
 
       - name: Save state
@@ -34,5 +44,5 @@ jobs:
           git config user.name "bot"
           git config user.email "bot@github.com"
           git add warmup_state.json || true
-          git commit -m "update state" || true
-          git push
+          git commit -m "update warmup state" || true
+          git push || true
