--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -3,39 +3,46 @@ name: Warmup Bot
 on:
   workflow_dispatch:
   schedule:
-    # كل 10 دقايق بين 13:00 و 18:50 (بتوقيت المغرب إذا كان UTC+0)
-    - cron: "*/10 13-18 * * *"
+    # كل 5 دقائق بين 13:00 و 18:59 (UTC+0)
+    - cron: "*/5 13-18 * * *"
+
+permissions:
+  contents: write
+
+concurrency:
+  group: warmup-bot
+  cancel-in-progress: true
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-
     steps:
-      - name: Download code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Python
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install libraries
+      - name: Install deps
         run: pip install -r requirements.txt
 
-      - name: Create Google key file
+      - name: Create gcp key file
         run: printf '%s' "${{ secrets.GCP_KEY }}" > gcp-key.json
 
       - name: Run bot
         env:
-          ZOHO_PASSWORD: ${{ secrets.ZOHO_PASSWORD }}
           ZOHO_EMAIL: contact@dualwin.agency
+          ZOHO_PASSWORD: ${{ secrets.ZOHO_PASSWORD }}
+          NTFY_TOPIC: DualWin_Agency
         run: python warmup_bot.py
 
-      - name: Save state
+      - name: Commit state
         run: |
-          git config user.name "bot"
-          git config user.email "bot@github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add warmup_state.json || true
-          git commit -m "update state" || true
-          git push
+          git commit -m "update warmup state" || true
+          git push || true
