--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -3,8 +3,7 @@ name: Warmup Bot
 on:
   workflow_dispatch:
   schedule:
-    # كل 5 دقائق بين 13:00 و 18:59 (UTC+0)
-    - cron: "*/5 13-18 * * *"
+    - cron: "*/10 * * * *"
 
 permissions:
   contents: write
@@ -20,6 +19,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true
+          fetch-depth: 0
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -29,7 +31,7 @@ jobs:
       - name: Install deps
         run: pip install -r requirements.txt
 
-      - name: Create gcp key file
+      - name: Create gcp key
         run: printf '%s' "${{ secrets.GCP_KEY }}" > gcp-key.json
 
       - name: Run bot
@@ -45,4 +47,5 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add warmup_state.json || true
           git commit -m "update warmup state" || true
+          git pull --rebase || true
           git push || true
