--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,35 +1,42 @@
 name: Warmup Bot
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: "*/30 * * * *"
-  workflow_dispatch:
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
-
     permissions:
       contents: write
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
       - name: Install deps
         run: pip install -r requirements.txt
 
-      - name: Create gcp key file
+      - name: Create gcp key
         run: |
-          echo '${{ secrets.GCP_KEY }}' > gcp-key.json
+          echo "${{ secrets.GCP_KEY }}" > gcp-key.json
 
       - name: Run bot
         env:
           ZOHO_EMAIL: ${{ secrets.ZOHO_EMAIL }}
           ZOHO_PASSWORD: ${{ secrets.ZOHO_PASSWORD }}
+          NTFY_TOPIC: ${{ secrets.NTFY_TOPIC }}
+          MAX_SEND_PER_RUN: "1"
         run: python warmup_bot.py
+
+      - name: Commit state
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add warmup_state.json || true
+          git commit -m "update warmup state" || exit 0
+          git push
